--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=recomendSeries
-spring.datasource.url=jdbc:postgresql://localhost:5432/users
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=admin
 spring.datasource.password=admin
 spring.jpa.database=postgresql
