--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,6 @@
 spring.application.name=recomendSeries
-spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
-spring.datasource.username=admin
+spring.datasource.url=jdbc:postgresql://localhost:5432/db
+spring.datasource.username=postgres
 spring.datasource.password=admin
 spring.jpa.database=postgresql
 spring.datasource.driver-class-name=org.postgresql.Driver
- testing.app.secret=flfkjafafkajhfa
- testing.app.lifetime=60000
